...
                ),
              ),
            ],
          ),
          SizedBox(height: 50.w),
          InkWell(
            key: const Key("goNext"),
            onTap: () {
              setState(() {
                step = 1;
              });
            },
            child: Container(
...
    } else if (s == 1) {
      return Form(
        key: _formKey,
        child: Column(
          children: [
            TextFormField(
              key: const Key("nick"),
              style: TextStyle(
                color: constTheme.centerChannelColor,
              ),
              decoration: InputDecoration(
                hintText: L10n.of(context)!.accountName,
                hintStyle: TextStyle(
...
                }
                return null;
              },
            ),
            SizedBox(height: 10.w),
            TextFormField(
              key: const Key("passwd"),
              style: TextStyle(
                color: constTheme.centerChannelColor,
              ),
              controller: _passwordController,
              obscureText: true,
              decoration: InputDecoration(
...
                }
                return null;
              },
            ),
            SizedBox(height: 10.w),
            TextFormField(
              key: const Key("passwd2"),
              style: TextStyle(
                color: constTheme.centerChannelColor,
              ),
              obscureText: true,
              decoration: InputDecoration(
                hintText: L10n.of(context)!.accountPasswd2,
...
                }
                return null;
              },
            ),
            SizedBox(height: 50.w),
            InkWell(
              key: const Key("keyDone"),
              onTap: () {
                if (_formKey.currentState == null || !_formKey.currentState!.validate()) {
                  return;
                }
                _formKey.currentState!.save();

...
