...
  }

  @override
  Widget build(BuildContext context) {
    final constTheme = Theme.of(context).extension<ExtColors>()!;
    return Scaffold(
      key: const Key("createTaskView"),
      backgroundColor: constTheme.centerChannelBg,
      appBar: widget.closeModel == null
          ? LocalAppBar(
              title: "Create a task",
              onBack: () {
                if (widget.closeModel != null) {
...
  }

  renderLeft() {
    final constTheme = Theme.of(context).extension<ExtColors>()!;
    return [
      TextFormField(
        key: const Key("taskTitle"),
        style: TextStyle(color: constTheme.centerChannelColor),
        decoration: InputDecoration(
          hintText: 'Task title',
          hintStyle: TextStyle(fontSize: 14.w, color: constTheme.centerChannelColor),
          filled: true,
          fillColor: constTheme.centerChannelColor.withOpacity(0.1),
...
            Padding(
              padding: EdgeInsets.only(left: 7.w, top: 8.w),
              child: Icon(Icons.description_rounded, color: constTheme.centerChannelColor, size: 18.w),
            ),
            Expanded(
              child: TextFormField(
                key: const Key("taskDesc"),
                style: TextStyle(color: constTheme.centerChannelColor),
                maxLines: 4,
                decoration: InputDecoration(
                  hintText: 'Task detail',
                  hintStyle: TextStyle(fontSize: 14.w, color: constTheme.centerChannelColor),
                  filled: true,
...
          ],
        ),
      ),
      Expanded(child: Container()),
      // SizedBox(height: 50.w),
      InkWell(
        key: const Key("createTask"),
        onTap: submitAction,
        child: Container(
          padding: EdgeInsets.symmetric(vertical: 10.w, horizontal: 30.w),
          alignment: Alignment.center,
          decoration: BoxDecoration(
            color: constTheme.buttonBg,
...
