...

class ProjectPageState extends State<ProjectPage> with TickerProviderStateMixin {
  final boardScrollController = ScrollController();
  late final WeTEECTX dao;
  late TabController _tabController;
  late PageController pageController = PageController();
  final titleList = <String>["Kanban", "Members", "Referendums"];
  List<String> members = [];
  AccountData? share;
  List<PreProp> pending = [];
  List<Prop> going = [];

  List<TaskInfo> todo = [];
...
  }

  @override
  Widget build(BuildContext context) {
    final constTheme = Theme.of(context).extension<ExtColors>()!;
    return Column(
      key: const Key("projectView"),
      crossAxisAlignment: CrossAxisAlignment.start,
      children: [
        Container(
          margin: EdgeInsets.only(left: 20.w, right: 20.w),
          child: Column(
            crossAxisAlignment: CrossAxisAlignment.start,
...
                        ],
                      ),
                    ),
                  ),
                  SizedBox(width: 10.w),
                  InkWell(
                    key: const Key("createTaskBtn"),
                    onTap: () {
                      showModelOrPage(context, "/create_task/${widget.info.id}/-1", width: 800, height: 500);
                    },
                    child: Container(
                      height: 30.w,
                      padding: EdgeInsets.all(5.w),
...
